# sdk

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml
.github/workflows/: bumpversion.yml  ci.yml
migrations/001-create-document-table/: up.sql
src/: errors.rs  lib.rs  storage.rs
src/documents/: mod.rs  service.rs  storage.rs
tests/: integration_test.rs
